force-app/main/default/objects/ACBalIS__c/ACBalIS__c.object-meta.xml
<CustomObject>
    <label>A/C Bal+I/S(P/L)</label>
    <nameField>
        <displayFormat>ACIS-{000000}</displayFormat>
        <label>A/C BAL+I/S ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/C Bal+I/S(P/L)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>