force-app/main/default/objects/ACBalIS__c/fields/ACBalID__c.field-meta.xml
<CustomField>
    <fullName>ACBalID__c</fullName>
    <label>A/C BAL ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>A/C BAL+I/S(P/L)</relationshipLabel>
    <relationshipName>ACBalIS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>