force-app/main/default/objects/ACBalIS__c/fields/BalanceTypeFormu__c.field-meta.xml
<CustomField>
    <fullName>BalanceTypeFormu__c</fullName>
    <formula>text(ACBalID__r.BalanceType__c)</formula>
    <label>BALANCE TYPE-FORMU</label>
    <type>Text</type>
</CustomField>