force-app/main/default/objects/ACBalIS__c/fields/BalanceTypeIS__c.field-meta.xml
<CustomField>
    <fullName>BalanceTypeIS__c</fullName>
    <label>BALANCE TYPE-I/S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BalanceType</valueSetName>
    </valueSet>
</CustomField>