force-app/main/default/objects/ACBalIS__c/fields/ISID__c.field-meta.xml
<CustomField>
    <fullName>ISID__c</fullName>
    <label>I/S(P/L) ID</label>
    <referenceTo>IncomeStatement__c</referenceTo>
    <relationshipLabel>A/C BAL+I/S(P/L)</relationshipLabel>
    <relationshipName>ACBalISID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>