force-app/main/default/objects/ACBalIS__c/fields/ISRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>ISRollupStatus__c</fullName>
    <label>I/S ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>