force-app/main/default/objects/ACBalIS__c/fields/TranBalCreditFormu__c.field-meta.xml
<CustomField>
    <fullName>TranBalCreditFormu__c</fullName>
    <formula>ACBalID__r.TransactionBalanceLocalCredit__c</formula>
    <label>TRANSACTION BAL-CREDIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>