force-app/main/default/objects/ACBalIS__c/fields/TranBalDebitFormu__c.field-meta.xml
<CustomField>
    <fullName>TranBalDebitFormu__c</fullName>
    <formula>ACBalID__r.TransactionBalanceLocalDebit__c</formula>
    <label>TRANSACTION BAL-DEBIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>